# Federated-Learning-meets-Homomorphic-Encryption

./: README.md  encrypted_learning.ipynb  federated-learning-and-bfv-scheme.ipynb  federated-learning-and-bgv-scheme.ipynb
data/: README.md  crypto_context.txt  dataset1.csv  dataset2.csv  dataset3.csv  dataset4.csv  enc_aggregator_weight_server.txt  enc_weight_client1.txt  enc_weight_client2.txt  enc_weight_client3.txt  private_key.txt  public_key.txt  test.csv
data/bfv/: crypto_context.txt  enc_aggregator_weight_server.txt  enc_weight_client1.txt  enc_weight_client2.txt  enc_weight_client3.txt  enc_weight_client4.txt  mult_key.txt  private_key.txt  public_key.txt
data/bgv/: crypto_context.txt  enc_aggregator_weight_server.txt  enc_weight_client1.txt  enc_weight_client2.txt  enc_weight_client3.txt  enc_weight_client4.txt  mult_key.txt  private_key.txt  public_key.txt
data/ckks/: enc_aggregator_weight_server.txt  enc_weight_client1.txt  enc_weight_client2.txt  enc_weight_client3.txt  enc_weight_client4.txt  private_key.txt  public_key.txt
images/: draw
models/: LogisticRegression.py
openfhe-lib/: README.md  key_generation.cpp  openFHE.py
openfhe-lib/data/: enc_aggregator_weight_server.txt  enc_weight_client1.txt  enc_weight_client2.txt  enc_weight_client3.txt  public_key.txt
openfhe_lib/: client.cpp  demo.py  openFHE.py  server.cpp
openfhe_lib/bfv/: CMakeLists.txt  client.cpp  key_generation.cpp  openFHE.py  server.cpp
openfhe_lib/bgv/: client.cpp  (+3 more)
report/: Final_Report_Group12.docx  Final_Report_Group12.pptx  Final_Report_Group12.pptx:Zone.Identifier
(+9 files in other folders)
